Final: Correct absolute paths for Pages

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>网页相片拼图游戏 (4x4)</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/photo-jigsaw-puzzle/style.css">
 </head>
 <body>
 
@@ -36,6 +36,6 @@
     
     <canvas id="cropCanvas" style="display:none;" width="1080" height="1080"></canvas>
 
-    <script src="script.js"></script>
+    <script src="/photo-jigsaw-puzzle/script.js"></script>
 </body>
 </html>
